Fix a few bugs in parsing message-status in maildir The bugs meant more status flags was lost than necessary, when importing a maildir or when rebuilding the index.

BUG: 112724


svn path=/branches/KDE/4.4/kdepim/; revision=1157541